--- a/ChatDemoUI3.0/AndroidManifest.xml
+++ b/ChatDemoUI3.0/AndroidManifest.xml
@@ -442,7 +442,7 @@
         <!-- 设置环信应用的appkey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
-            android:value="easemob-demo#chatdemoui" />
+            android:value="i#superwechat201607" />
         <!-- 声明sdk所需的service -->
         <service
             android:name="com.hyphenate.chat.EMChatService"
@@ -477,8 +477,7 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="3ecea51f560650b1ed8a4b99808f52e8" />
-
-        <activity android:name=".ui.GuideActivity"></activity>
+K
     </application>
 
 </manifest>
