--- a/ChatDemoUI3.0/build.gradle
+++ b/ChatDemoUI3.0/build.gradle
@@ -71,10 +71,11 @@ dependencies {
     //    compile ('com.anthonycr.grant:permissions:1.0'){
     //        exclude module: 'support-v4'
     //    }
-    compile 'com.android.support:appcompat-v7:23.4.0'
     compile files('libs/gson-2.7.jar')
     compile files('libs/okhttp-3.2.0.jar')
     compile files('libs/okio-1.9.0.jar')
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
