--- a/ChatDemoUI3.0/AndroidManifest.xml
+++ b/ChatDemoUI3.0/AndroidManifest.xml
@@ -45,15 +45,14 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="cn.ucai.superwechat.permission.MIPUSH_RECEIVE" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".SuperwechatApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:theme="@style/AppTheme"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ui.MainActivity"
             android:launchMode="singleTask"
@@ -73,11 +72,8 @@
             </intent-filter>
         </activity>
 
-        <!--欢迎页-->
-        <activity
-            android:name=".ui.GuideActivity">
-
-        </activity>
+        <!-- 欢迎页 -->
+        <activity android:name=".ui.GuideActivity"></activity>
 
         <!-- 登陆 -->
         <activity
@@ -480,7 +476,8 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="3ecea51f560650b1ed8a4b99808f52e8" />
-K
+        K
+        <activity android:name=".utils.ExitAppUtils"></activity>
     </application>
 
 </manifest>
