--- a/ChatDemoUI3.0/settings.gradle
+++ b/ChatDemoUI3.0/settings.gradle
@@ -1,4 +1,4 @@
-include ':EaseUI', ':redpacketlibrary'
+include ':EaseUI', ':redpacketlibrary', ':easeui', ':ulive-android-sdk', ':app'
 project(':EaseUI').projectDir = new File('../easeui')
 
 //release时需要把下面的include相关的两行注释掉
