--- a/ChatDemoUI3.0/build.gradle
+++ b/ChatDemoUI3.0/build.gradle
@@ -25,11 +25,15 @@ android {
 
     defaultConfig {
         applicationId "cn.ucai.superwechat"
-        minSdkVersion 11
-        targetSdkVersion 22
+        minSdkVersion 19
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
         multiDexEnabled true
     }
-
+    configurations {
+        all*.exclude group: 'com.android.support', module: 'support-v4'
+    }
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -62,7 +66,6 @@ android {
         }
     }
 }
-
 dependencies {
     compile project(':redpacketlibrary')
     compile project(':EaseUI')
@@ -71,15 +74,12 @@ dependencies {
     //    compile ('com.anthonycr.grant:permissions:1.0'){
     //        exclude module: 'support-v4'
     //    }
-    compile files('libs/gson-2.7.jar')
-    compile files('libs/okhttp-3.2.0.jar')
-    compile files('libs/okio-1.9.0.jar')
-    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile project(':ulive-android-sdk')
     compile 'com.android.support:design:23.4.0'
     compile 'com.github.florent37:viewanimator:1.0.4'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    compile 'com.squareup.okio:okio:1.11.0'
 }
