--- a/ChatDemoUI3.0/build.gradle
+++ b/ChatDemoUI3.0/build.gradle
@@ -25,7 +25,7 @@ android {
 
     defaultConfig {
         applicationId "cn.ucai.superwechat"
-        minSdkVersion 19
+        minSdkVersion 22
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -82,4 +82,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.squareup.okio:okio:1.11.0'
+    compile files('libs/android-support-multidex.jar')
 }
