--- a/ChatDemoUI3.0/AndroidManifest.xml
+++ b/ChatDemoUI3.0/AndroidManifest.xml
@@ -115,6 +115,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
             android:windowSoftInputMode="stateVisible" />
+        <activity android:name=".ui.ChangeActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/horizontal_slide"
+            android:windowSoftInputMode="stateVisible" />
         <!-- 群组详情 -->
         <activity
             android:name=".ui.GroupDetailsActivity"
